# rpg_system-dev

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  deno.jsonc  launch.vs.json  setup.ps1
data/: CMakeLists.txt
data/XDG/: org.cataclysmbn.CataclysmBN.metainfo.xml
data/json/: ammo_effects.json  construction_group.json  flags.json  flags_mutation.json  harvest.json  item_actions.json  loot_zones.json  lua_traits.lua  main.lua  player_activities.json  preload.lua  professions.json  scenarios.json  sonar.lua  speech.json  start_locations.json  vehicle_groups.json  world_types.json
data/json/construction/: construct.json  construct_workshop.json
data/json/external_tileset/: External_Tileset_DP_Normal.json
data/json/furniture_and_terrain/: furniture-appliances.json  furniture-power-portals.json  terrain-dimensional.json  terrain-doors.json
data/json/itemgroups/: art_antiques_crafts.json  books.json  collections_domestic.json  food_service.json  main.json  military.json  stashes.json  supplies.json  vehicles_fuel_related.json  vending_machines.json
data/json/items/: ammo_types.json  fake.json  furniture.json  tool_armor.json
data/json/mapgen/: bunker.json  garage_gas.json  regional_airport.json  speedway.json  ws_regional_dump.json
data/json/mapgen_palettes/: regional_dump_palette.json
data/json/monsters/: defense_bot.json  mammal.json  mechsuits.json  mutant_animal.json
data/json/mutations/: mutation_appearance.json  mutation_type.json  mutations.json
data/json/npcs/: NC_BANDIT.json  (+1 more)
data/raw/: generate_types.lua
(+398 files in other folders)
